--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/style.css">
-    <script src="../src/min_copy.js"></script>
+    <link rel="stylesheet" href="../src/css/choices.min.css">
+    <link rel="stylesheet" href="../src/css/style.css">
+    <script src="../src/js/min_copy.js"></script>
     <title>Натяжные потолки в Москве</title>
 </head>
 <body>
@@ -225,28 +226,15 @@
                                         <div class="title_info">Информация о потолке</div>
                                         <div class="form_group">
                                             <label for="name_ceiling" class="form_label">Полотно</label>
-                                            <div class="select_wrapper">
-                                                <b class="button"></b>
-                                                <ul>
-                                                    <li value="1">MAT</li>
-                                                </ul>
-                                                <select name="canvas" id="name_ceiling">
-                                                    <option value="0">Выберите</option>
-                                                    <option value="0">Матовый</option>
-                                                    <option value="0">Глянец</option>
-                                                    <option value="0">Тканевый</option>
-                                                </select>
-                                                <div class="selectric">
-                                                    <span class="label">Выб</span>
-                                                    <div class="selectric_items">
-                                                        <ul>
-                                                            <li>Мат</li>
-                                                            <li>Сат</li>
-                                                            <li>Глян</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <select class="js-choice" name="canvas" id="name_ceiling">
+                                                <option value="0">Выберите</option>
+                                                <option value="0">Матовый</option>
+                                                <option value="0">Глянец</option>
+                                                <option value="0">Тканевый</option>
+                                                <option value="0">Матовый</option>
+                                                <option value="0">Глянец</option>
+                                                <option value="0">Тканевый</option>
+                                            </select>
                                         </div>
                                         <div class="form_group">
                                             <label for="square">Площадь м<sup>2</sup></label>
@@ -254,53 +242,26 @@
                                         </div>
                                         <div class="form_group">
                                             <label for="name_corner" class="form_label">Доп. углы</label>
-                                            <div class="select_wrapper">
-                                                <b class="button"></b>
-                                                <select name="corner" id="name_corner">
-                                                    <option value="0">Выберите</option>
-                                                    <option value="0">1</option>
-                                                    <option value="0">2</option>
-                                                    <option value="0">3</option>
-                                                </select>
-                                                <div class="selectric">
-                                                    <span class="label">Выб</span>
-                                                    <div class="selectric_items">
-                                                        <ul>
-                                                            <li>1</li>
-                                                            <li>2</li>
-                                                            <li>3</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <select class="js-choice" name="corner" id="name_corner">
+                                                <option value="0">Выберите</option>
+                                                <option value="0">1</option>
+                                                <option value="0">2</option>
+                                                <option value="0">3</option>
+                                            </select>
                                         </div>
                                         <div class="form_group">
                                             <label for="name_pipe" class="form_label">Кол. труб</label>
-                                            <div class="select_wrapper">
-                                                <b class="button"></b>
-                                                <select name="pipe" id="name_pipe">
-                                                    <option value="0">Выберите</option>
-                                                    <option value="0">1</option>
-                                                    <option value="0">2</option>
-                                                    <option value="0">3</option>
-                                                </select>
-                                                <div class="selectric">
-                                                    <span class="label">Выб</span>
-                                                    <div class="selectric_items">
-                                                        <ul>
-                                                            <li>1</li>
-                                                            <li>2</li>
-                                                            <li>3</li>
-                                                            <li>3</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <select class="js-choice" name="pipe" id="name_pipe">
+                                                <option value="0">Выберите</option>
+                                                <option value="0">1</option>
+                                                <option value="0">2</option>
+                                                <option value="0">3</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="col_form">
                                         <div class="title_info">Освещение</div>
-                                        <div class="form_group">
+                                        <div class="form_group group_ident">
                                             <label for="name_chandelier">Люстра</label>
                                             <input id="name_chandelier" type="text" class="form_control">
                                         </div>
@@ -324,8 +285,9 @@
                                                 <label for="phone">Телефон*</label>
                                                 <input id="phone" type="text" class="form_control">
                                             </div>
-                                            <label class="checkbox">
+                                            <label class="checkbox_label">
                                                 <input type="checkbox" checked>
+                                                <span class="checkbox"></span>
                                                 <span class="checkbox_text">Согласие на обработку <br><a class="data" href="#">персональных данных</a></span>
                                             </label>
                                             <button type="submit" class="main_btn">Оставить заявку</button>
@@ -336,6 +298,113 @@
                         </div>
                     </div>    
                 </div>
+
+                <div class="stages_section">
+                    <div class="container">
+                        <div class="section_title">этапы сотрудничества</div>
+                        <div class="stages_flex_block">
+                            <div class="stages_item">
+                                <div class="item_circle">
+                                    <span class="arrow_stages"><img src="../src/icons/arrow.webp" alt=""></span>
+                                    <div class="img-circle"><img src="../src/icons/stages_1.webp" alt=""></div>
+                                    <span>Звонок<br> или<br> заявка</span>
+                                </div>
+                            </div>
+                            <div class="stages_item">
+                                <div class="item_circle circle_bottom">
+                                    <span class="arrow_stages arrow_stages_two"><img src="../src/icons/arrow_two.webp" alt=""></span>
+                                    <span>Бесплатный<br> выезд<br> замерщика</span>
+                                    <div class="img-circle"><img src="../src/icons/stages_2.webp" alt=""></div>
+                                </div>
+                            </div>
+                            <div class="stages_item">
+                                <div class="item_circle">
+                                    <span class="arrow_stages"><img src="../src/icons/arrow.webp" alt=""></span>
+                                    <div class="img-circle"><img class="img_margin_left" src="../src/icons/stages_3.webp" alt=""></div>
+                                    <span>Договор<br> и 20%<br> предоплата.</span>
+                                </div>
+                            </div>
+                            <div class="stages_item">
+                                <div class="item_circle circle_bottom">
+                                    <span class="arrow_stages arrow_stages_two"><img src="../src/icons/arrow_two.webp" alt=""></span>
+                                    <span>Производство<br> 1-3 дня</span>
+                                    <br>
+                                    <div class="img-circle"><img src="../src/icons/stages_4.webp" alt=""></div>
+                                </div>
+                            </div>
+                            <div class="stages_item">
+                                <div class="item_circle">
+                                    <span class="arrow_stages"><img src="../src/icons/arrow.webp" alt=""></span>
+                                    <div class="img-circle"><img src="../src/icons/stages_5.webp" alt=""></div>
+                                    <span>Монтаж <br>3 часа</span>
+                                </div>
+                            </div>
+                            <div class="stages_item">
+                                <div class="item_circle circle_bottom">
+                                    <span>Уборка<br> на объекте</span>
+                                    <br>
+                                    <div class="img-circle"><img src="../src/icons/stages_6.webp" alt=""></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="certificate_section">
+                    <div class="container">
+                        <div class="section_title">Сертификаты</div>
+                        <div class="wrapp_certificate_slide">
+                            <span class="arrow_left"></span>
+                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                            <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                            <span class="arrow_right"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="questions_section">
+                    <div class="container">
+                        <div class="section_title">Часто задаваемые вопросы</div>
+                        <div class="questions_item">
+                            <span class="arrow"></span>
+                            <div class="questions_header">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                            </div>
+                            <div class="questions_answers hide">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
+                            </div>
+                        </div>
+                        <div class="questions_item">
+                            <span class="arrow"></span>
+                            <div class="questions_header">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                            </div>
+                            <div class="questions_answers hide">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
+                            </div>
+                        </div>
+                        <div class="questions_item">
+                            <span class="arrow"></span>
+                            <div class="questions_header">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                            </div>
+                            <div class="questions_answers hide">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
+                            </div>
+                        </div>
+                        <div class="questions_item">
+                            <span class="arrow"></span>
+                            <div class="questions_header">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                            </div>
+                            <div class="questions_answers hide">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="page"></div>
     
             </div>
         </main>
@@ -343,6 +412,7 @@
    <footer class="main_footer">
 
    </footer>
-   <script src="app.js"></script>
+   <script src="js/choices.min.js"></script>
+   <script src="js/app.js"></script>
 </body>
 </html>
