--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
                         <div class="container">
                             <div class="tab_product_card">
                                 <div class="item_circle product_item_circle">
-                                    <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <div class="img-circle tab_circle"><span class="stroke"><img class="app" src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
                                     <span class="product_name">Матовые</span>
                                 </div>
                                 <div class="item_circle product_item_circle">
@@ -189,11 +189,31 @@
                                     <span class="product_name">Фотопечать</span>
                                 </div>
                             </div>
-                            <div class="block_descr_product_card">
-                                <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+                            <div class="container_product_card">
+                                <div class="block_descr_product_card">
+                                    <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+                                    <div class="product_descr">
+                                        <div class="title_product_flex">
+                                            <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+                                        <ul class="product-card_label">
+                                            <li class="sale_one">Скидка на полотно 30%</li>
+                                            <li class="sale_two">Популярное</li>
+                                        </ul>
+                                        </div>
+                                        <div class="text_descr">
+                                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                                            <br>
+                                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+                                        </div>
+                                        <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+                                        <a class = "main_btn" href="#">Подробнее</a>
+                                    </div>
+                               </div>
+                               <div class="block_descr_product_card">
+                                <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-29 в 20.48.21_0ca61a7e.jpg" alt=""></div>
                                 <div class="product_descr">
                                     <div class="title_product_flex">
-                                        <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+                                        <div class="section_title"><h3>Глянцевые натяжные потолки</h3></div>
                                     <ul class="product-card_label">
                                         <li class="sale_one">Скидка на полотно 30%</li>
                                         <li class="sale_two">Популярное</li>
@@ -208,7 +228,142 @@
                                     <a class = "main_btn" href="#">Подробнее</a>
                                 </div>
                            </div>
+                           <div class="block_descr_product_card">
+                            <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+                            <div class="product_descr">
+                                <div class="title_product_flex">
+                                    <div class="section_title"><h3>Сатиновые натяжные потолки</h3></div>
+                                <ul class="product-card_label">
+                                    <li class="sale_one">Скидка на полотно 30%</li>
+                                    <li class="sale_two">Популярное</li>
+                                </ul>
+                                </div>
+                                <div class="text_descr">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                                    <br>
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+                                </div>
+                                <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+                                <a class = "main_btn" href="#">Подробнее</a>
+                            </div>
                        </div>
+                       <div class="block_descr_product_card">
+                        <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+                        <div class="product_descr">
+                            <div class="title_product_flex">
+                                <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+                            <ul class="product-card_label">
+                                <li class="sale_one">Скидка на полотно 30%</li>
+                                <li class="sale_two">Популярное</li>
+                            </ul>
+                            </div>
+                            <div class="text_descr">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                                <br>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+                            </div>
+                            <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+                            <a class = "main_btn" href="#">Подробнее</a>
+                        </div>
+                   </div>
+                   <div class="block_descr_product_card">
+                    <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+                    <div class="product_descr">
+                        <div class="title_product_flex">
+                            <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+                        <ul class="product-card_label">
+                            <li class="sale_one">Скидка на полотно 30%</li>
+                            <li class="sale_two">Популярное</li>
+                        </ul>
+                        </div>
+                        <div class="text_descr">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                            <br>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+                        </div>
+                        <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+                        <a class = "main_btn" href="#">Подробнее</a>
+                    </div>
+               </div>
+               <div class="block_descr_product_card">
+                <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+                <div class="product_descr">
+                    <div class="title_product_flex">
+                        <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+                    <ul class="product-card_label">
+                        <li class="sale_one">Скидка на полотно 30%</li>
+                        <li class="sale_two">Популярное</li>
+                    </ul>
+                    </div>
+                    <div class="text_descr">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                        <br>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+                    </div>
+                    <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+                    <a class = "main_btn" href="#">Подробнее</a>
+                </div>
+           </div>
+           <div class="block_descr_product_card">
+            <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+            <div class="product_descr">
+                <div class="title_product_flex">
+                    <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+                <ul class="product-card_label">
+                    <li class="sale_one">Скидка на полотно 30%</li>
+                    <li class="sale_two">Популярное</li>
+                </ul>
+                </div>
+                <div class="text_descr">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                    <br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+                </div>
+                <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+                <a class = "main_btn" href="#">Подробнее</a>
+            </div>
+       </div>
+       <div class="block_descr_product_card">
+        <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+        <div class="product_descr">
+            <div class="title_product_flex">
+                <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+            <ul class="product-card_label">
+                <li class="sale_one">Скидка на полотно 30%</li>
+                <li class="sale_two">Популярное</li>
+            </ul>
+            </div>
+            <div class="text_descr">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                <br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+            </div>
+            <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+            <a class = "main_btn" href="#">Подробнее</a>
+        </div>
+    </div>
+    <div class="block_descr_product_card">
+        <div class="pruduct_photo"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></div>
+        <div class="product_descr">
+            <div class="title_product_flex">
+                <div class="section_title"><h3>Матовые натяжные потолки</h3></div>
+            <ul class="product-card_label">
+                <li class="sale_one">Скидка на полотно 30%</li>
+                <li class="sale_two">Популярное</li>
+            </ul>
+            </div>
+            <div class="text_descr">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque veritatis ea in sit laborum voluptates consectetur, nulla officiis modi maiores dolores molestias ipsam numquam perferendis sunt. Magni atque quasi soluta, temporibus illum debitis rerum repellat saepe neque deserunt mollitia? Sed atque minus officia nisi quia sit? Dolorum accusantium nemo nobis?</p>
+                <br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iusto fuga quidem minus dignissimos obcaecati beatae corporis eum. Soluta dolorum iusto cumque quod pariatur nostrum esse fugit aperiam itaque facilis!</p>
+            </div>
+            <div class="product-card_price">Цена с установкой от<span class="product-card_new-price"> 427 руб/м<sup>2</sup></span>&nbsp;&nbsp;<del class="product-card_old-price">860 руб/м<sup>2</sup></del></div>
+            <a class = "main_btn" href="#">Подробнее</a>
+        </div>
+    </div>
+    
+                            </div>
+                     </div>
                    </div>
                 </div>
 
@@ -354,11 +509,13 @@
                         <div class="section_title">Сертификаты</div>
                         <div class="wrapp_certificate_slide">
                            <div class="certificate_slide">
-                                <div class="certificate_item"><img src="../src/img/Слой 534.png" alt=""></div>
+                                <div class="certificate_item"><img src="../src/img/Слой 317 копия 2.png" alt=""></div>
                                 <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
                                 <div class="certificate_item"><img src="../src/img/Слой 532.png" alt=""></div>
                                 <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
                                 <div class="certificate_item"><img src="../src/img/certif_1.webp" alt=""></div>
+                                <div class="certificate_item"><img src="../src/img/Слой 532.png" alt=""></div>
+                                <div class="certificate_item"><img src="../src/img/Слой 317 копия 5.png" alt=""></div>
                            </div>
                            <span class="arrow_left"></span>
                            <span class="arrow_right"></span>
